Fix not visible scrollbar

--- a/scss/_panel.scss
+++ b/scss/_panel.scss
@@ -66,7 +66,7 @@
       border-width: 2px 2px 1px 2px;
       background: var(--default);
       box-sizing: border-box;
-      background-clip: padding-box;
+      background-clip: border-box;
     }
   }
   > footer {
